--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aws-amplify": "^1.1.32",
+    "bootstrap": "^4.3.1",
+    "dotenv": "^10.0.0",
     "react": "^16.8.6",
+    "react-beautiful-dnd": "^11.0.5",
+    "react-bootstrap": "^1.0.0-beta.10",
+    "react-columns": "^1.2.1",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-jsonschema-form": "^1.7.0",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "uuid4": "^1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
