--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -71,10 +71,5 @@
 			]
 		}
 	},
-	"hosting": {
-		"S3AndCloudFront": {
-			"service": "S3AndCloudFront",
-			"providerPlugin": "awscloudformation"
-		}
-	}
+	"hosting": {}
 }
