--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "amplify": "^0.0.11",
     "aws-amplify": "^1.1.32",
     "bootstrap": "^4.3.1",
     "dotenv": "^10.0.0",
