--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "aws-amplify": "^1.1.32",
     "bootstrap": "^4.3.1",
     "dotenv": "^10.0.0",
+    "lottie-react": "^2.1.0",
     "react": "^16.8.6",
     "react-beautiful-dnd": "^11.0.5",
     "react-bootstrap": "^1.0.0-beta.10",
